--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,41 +1,50 @@
 version: '2'
+
+networks:
+  app:
+
 services:
   mysql:
     image: mysql:9.2
     environment:
-    - MYSQL_ROOT_PASSWORD=secret
-    - MYSQL_DATABASE=bookstack
-    - MYSQL_USER=bookstack
-    - MYSQL_PASSWORD=secret
+      - MYSQL_ROOT_PASSWORD=${DB_PASSWORD}
+      - MYSQL_DATABASE=${DB_DATABASE}
+      - MYSQL_USER=${DB_USERNAME}
+      - MYSQL_PASSWORD=${DB_PASSWORD}
+    restart: unless-stopped
     volumes:
-    - mysql-data:/var/lib/mysql
+      - ${DATA_BASE_PATH}/mysql:/var/lib/mysql
+    networks:
+      - app
 
   bookstack:
-    image: solidnerd/bookstack:25.5.2
+    build:
+      context: .
+      dockerfile: Dockerfile.muso
     depends_on:
-    - mysql
+      - mysql
     environment:
-    - DB_HOST=mysql:3306
-    - DB_DATABASE=bookstack
-    - DB_USERNAME=bookstack
-    - DB_PASSWORD=secret
-    # Set the APP_ to the URL of bookstack without without a trailing slash,
-    # but including any port numbers. For example, one of:
-    # APP_URL=https://example.com
-    # APP_URL=http://localhost:8080
-    # APP_URL=https://wiki.example.com:8443
-    - APP_URL=http://localhost:8080
-    # APP_KEY is used for encryption where needed, so needs to be persisted to
-    # preserve decryption abilities.
-    # Can run `php artisan key:generate` to generate a key
-    - APP_KEY=SomeRandomStringWith32Characters
+      - DB_HOST=${DB_HOST}
+      - DB_DATABASE=${DB_DATABASE}
+      - DB_USERNAME=${DB_USERNAME}
+      - DB_PASSWORD=${DB_PASSWORD}
+      - APP_NAME=${APP_NAME}
+      - APP_URL=${APP_URL}
+      - APP_ENV=${APP_ENV}
+      - APP_KEY=${APP_KEY}
+      - APP_DEBUG=${APP_DEBUG:-false}
+      - APP_LANG=${APP_LANG:-fr}
+      - APP_AUTO_LANG_PUBLIC=${APP_AUTO_LANG_PUBLIC:-false}
+      - MAIL_DRIVER=${MAIL_DRIVER}
+      - MAIL_FROM_NAME=${MAIL_FROM_NAME}
+      - MAIL_FROM=${MAIL_FROM}
+      - MAIL_HOST=${MAIL_HOST}
+      - MAIL_PORT=${MAIL_PORT}
+      - MAIL_USERNAME=${MAIL_USERNAME}
+      - MAIL_PASSWORD=${MAIL_PASSWORD}
+    restart: unless-stopped
     volumes:
-    - uploads:/var/www/bookstack/public/uploads
-    - storage-uploads:/var/www/bookstack/storage/uploads
-    ports:
-    - "8080:8080"
-
-volumes:
- mysql-data:
- uploads:
- storage-uploads:
+      - ${DATA_BASE_PATH}/uploads:/var/www/bookstack/public/uploads
+      - ${DATA_BASE_PATH}/storage_uploads:/var/www/bookstack/storage/uploads
+    networks:
+      - app
